Score, batting, bowling tables added

--- a/live.html
+++ b/live.html
@@ -6,22 +6,25 @@
   <script src="score.js"></script>
 </head>
 <body>
-  <div id="scoreDisplay"></div>
+  <h2>Score</h2>
+    <div id="scoreDisplay"></div>
   
   <h3>Batting</h3>
-  <table id="battersTable">
-    <tr>
-      <th>Batter</th>
-      <th>Runs</th>
-      <th>Balls</th>
-      <th>4s</th>
-      <th>6s</th>
-      <th>Strike Rate</th>
-    </tr>
-    <tr id="strikeBatterRow"></tr>
-    <tr id="nonStrikeBatterRow"></tr>
+   <table id="battersTable">
+    <thead>
+      <tr>
+        <th>Batter</th>
+        <th>Runs</th>
+        <th>Balls</th>
+        <th>4s</th>
+        <th>6s</th>
+        <th>Strike Rate</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
   </table>
-  
+ 
   <div id="bowlerSection">
     <h3>Current Bowler</h3>
     <div id="bowlerStats"></div>
