D: final commit (I hope)

--- a/setup.html
+++ b/setup.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Setup</title>
+  <link rel="stylesheet" href="style/global.css">
   <link rel="stylesheet" href="style/setup.css">
-  <!-- TO DO: Include base stylesheet later -->
   <script src="score.js"></script>
 </head>
 <body>
