--- a/summary.html
+++ b/summary.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Match Summary</title>
+  <link rel="stylesheet" href="style/global.css">
   <link rel="stylesheet" href="style/summary.css">
   <script src="score.js"></script>
 </head>
