--- a/live.html
+++ b/live.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Live Score</title>
+  <link rel="stylesheet" type="text/css" href="style/global.css">
   <link rel="stylesheet" type="text/css" href="style/live.css">
   <script src="score.js"></script>
 </head>
 <body>
   <h2>Score</h2>
     <div id="scoreDisplay"></div>
-  
+    <br><br> 
   <h3>Batting</h3>
    <table id="battersTable">
     <thead>
@@ -24,25 +25,45 @@
     <tbody>
     </tbody>
   </table>
+  <br><br>
  
   <div id="bowlerSection">
     <h3>Current Bowler</h3>
     <div id="bowlerStats"></div>
   </div>
   
-  <div id="scoringButtons">
-    <button onclick="addRun(0)">0</button>
-    <button onclick="addRun(1)">1</button>
-    <button onclick="addRun(2)">2</button>
-    <button onclick="addRun(3)">3</button>
-    <button onclick="addRun(4)">4</button>
-    <button onclick="addRun(6)">6</button>
-    <button onclick="recordWicket()">Wicket</button>
+  <div id="scoringPanel">
+    <div id="scoringButtons">
+      <button onclick="addRun(0)">0</button>
+      <button onclick="addRun(1)">1</button>
+      <button onclick="addRun(2)">2</button>
+      <button onclick="addRun(3)">3</button>
+      <button onclick="addRun(4)">4</button>
+      <button onclick="addRun(6)">6</button>
+    </div>
+    <div id="actionButtons">
+      <button id="wicket" onclick="recordWicket()">Wicket</button>
+      <button onclick="addExtra('wide')">Wide</button>
+      <button onclick="addExtra('no-ball')">No-ball</button>
+      <input id="byeRuns" type="number" placeholder="Bye" min="0">
+      <button onclick="addExtra('bye', parseInt(document.getElementById('byeRuns').value)||0)">Bye</button>
+      <button onclick="addExtra('leg-bye')">Leg-bye</button>
+      <input id="legByeRuns" type="number" placeholder="Leg-bye" min="0">
+      <button onclick="addExtra('leg-bye', parseInt(document.getElementById('legByeRuns').value)||0)">Leg-bye</button>
+    </div>
+    <div id="runOutSection">
+      <input id="runOutRuns" type="number" placeholder="Runs" min="0">
+      <button onclick="recordRunOut(parseInt(document.getElementById('runOutRuns').value)||0)">
+        Run Out
+      </button>
+    </div>
   </div>
-  
-  <div>
-    <button onclick="window.location.href='scorecard.html'">Go to Scorecard</button>
-  </div>
+
+  <br><br><br>
+
+  <div class="button-container">
+      <button onclick="window.location.href='scorecard.html'">Go to Scorecard</button>
+</div>
 </body>
 </html>
 
