--- a/scorecard.html
+++ b/scorecard.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <title>Scorecard</title>
+  <link rel="stylesheet" href="style/global.css">
   <link rel="stylesheet" href="style/scorecard.css">
 </head>
 
 <body>
   <h1>Match Scorecard</h1>
+  <br>
 
+  <div class="button-container">
   <button id="backToLive" onclick="window.location.href='live.html'">Back to Live Match</button>
+</div>
+<br>
+<br>
 
   <h2>Batting Scorecard</h2>
   <table id="battingScorecard" class="scorecard-table">
